# beir-analyzer

./: .gitignore  README.md  evaluate_example.py  pyproject.toml
src/: config.py  embedding.py  main.py  models.py  qdrant_storage.py
